objects/Monthly_Maintenance__c.object
<CustomObject>
    <fields>
        <fullName>Google__c</fullName>
        <label>Google</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H_Tags_Still_in_Place__c</fullName>
        <label>H Tags Still in Place?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Check_Last_Updated__c</fullName>
        <formula>WebID__r.Last_Updated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Check Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HomePage_Spelling__c</fullName>
        <label>Home Page - Spelling</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Page_Calls_to_Action__c</fullName>
        <label>Home Page - Calls to Action</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Page_Image_Check__c</fullName>
        <label>Home Page - Image Check</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Page_Masthead_Check__c</fullName>
        <label>Home Page - Masthead Check</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Page_Navigation_Check__c</fullName>
        <label>Home Page - Navigation Check</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Page_Value_Proposition__c</fullName>
        <label>Home Page - Value Proposition</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - No Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - With Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Homepage_Content__c</fullName>
        <label>Homepage Content</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_List_Reason__c</fullName>
        <formula>TEXT(WebID__r.Hot_List_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hot List Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inform_Other_Specialists__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Inform and Consult with Content, SEO, PS and OM teams, as needed</inlineHelpText>
        <label>Inform Other Specialists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insider_Pages_Activity_Status__c</fullName>
        <label>Insider Pages Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insider_Pages_Activity__c</fullName>
        <inlineHelpText>Please note activity performed on the Insider Pages listing. No notes in this field will indicate no activity was performed.</inlineHelpText>
        <label>Insider Pages Activity</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Insider_Pages_Ranking__c</fullName>
        <inlineHelpText>Enter rankings using Dealer Name search using Google.</inlineHelpText>
        <label>Insider Pages Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Linking_Structure_w_Current_URL__c</fullName>
        <label>Internal Linking Structure w/Current URL</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Date_Teaming_Occurred__c</fullName>
        <description>This field will be updated by the nightly MM program through the Services database.</description>
        <inlineHelpText>This shows the last date a teaming call was logged.</inlineHelpText>
        <label>Last Date Teaming Occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Month_s_Campaign_Status__c</fullName>
        <label>Last Month&apos;s Campaign Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_QBR_Date__c</fullName>
        <label>Last QBR Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link_to_Launch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field was initially created for VW Social @ Retail project. AA&apos;s need to fill in some info in a Launch record. It may not be needed once this project is completed. The data saved in the field will also be obsolete. If this field is no longer useful it may be deleted.</description>
        <inlineHelpText>If this field has a link populated it will show you the Launch record associated with the Special Project Status field.</inlineHelpText>
        <label>Link to Launch</label>
        <referenceTo>Launch__c</referenceTo>
        <relationshipLabel>Monthly Maintenance</relationshipLabel>
        <relationshipName>Monthly_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Listing_Activity_Complete__c</fullName>
        <formula>IF( $RecordType.Name = &quot;RMS - Activity Tracking&quot;,
(
 IF( Ispickval( Bing_Map_Activity_Status__c ,&quot;Completed&quot;), 1, 0) +
 IF( ispickval( City_Search_Activity_Status__c  , &quot;Completed&quot;), 1, 0) +
 IF( ispickval( Google_Places_Activity_Status__c  , &quot;Completed&quot;), 1, 0) +
 IF( ispickval( Insider_Pages_Activity_Status__c  , &quot;Completed&quot;), 1, 0) +
 IF( ispickval( Yahoo_Local_Activity_Status__c  , &quot;Completed&quot;), 1, 0) +
 IF( ispickval( Yelp_Activity_Status__c  , &quot;Completed&quot;), 1, 0)
) / 6,

(
 IF( ispickval( Google_Places_Activity_Status__c  , &quot;Completed&quot;), 1, 0) +
 IF( ispickval( Yahoo_Local_Activity_Status__c  , &quot;Completed&quot;), 1, 0) +
 IF( Ispickval( Bing_Map_Activity_Status__c ,&quot;Completed&quot;), 1, 0) 
)/3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Listing Activity % Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MLP_Pages__c</fullName>
        <formula>WebID__r.MLP_Pages__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the value entered on the WebID in the field of the same name.</inlineHelpText>
        <label>MLP Pages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement__c</fullName>
        <label>Measurement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meta_Information_and_Structure__c</fullName>
        <label>Meta Information and Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <defaultValue>Date(Year(today()),month(today()),1)</defaultValue>
        <inlineHelpText>if less than 15th of the month use current month otherwise use next month</inlineHelpText>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_in_Review__c</fullName>
        <label>Month in Review</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Monthly_Email_Status__c</fullName>
        <label>Monthly Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <label>Monthly Optimization Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Both - Analytics/Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan - 5 Star DAP Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan - 5 Star Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan - Email Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan - Getting Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan - Helplist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan - In Store Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan - Review Postings/Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan - Review Response Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan - Third Party Business Listing Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Blog Posts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Dealership Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Helplist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Negative Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Overall Social Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Positive Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Profile Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social - Troubleshooting</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NRM_Call_Priority__c</fullName>
        <description>Formula pulls the NRM Call Priority Value from the WebID field NRM Call Priority.</description>
        <formula>WebID__r.NRM_Call_Priority__c</formula>
        <label>NRM Call Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_MM_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next MM Record</label>
        <referenceTo>Monthly_Maintenance__c</referenceTo>
        <relationshipLabel>Monthly Maintenance (Next MM Record)</relationshipLabel>
        <relationshipName>Monthly_Maintenance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Month_s_Primary_Goal__c</fullName>
        <label>Current Primary Goal</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Non_Performing_GEOs__c</fullName>
        <formula>WebID__r.Non_Performing_GEOs__c</formula>
        <inlineHelpText>Shows the value of the same field on the WebID.</inlineHelpText>
        <label>Non-Performing GEOs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OMS_Geography__c</fullName>
        <formula>TEXT( WebID__r.OMS_Geography__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OMS Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_MM_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be updated by the nightly MM program through the Services database.</description>
        <inlineHelpText>This link will open the Online Marketing Specialist’s MM record for the same month.</inlineHelpText>
        <label>OMS MM Link</label>
        <referenceTo>Monthly_Maintenance__c</referenceTo>
        <relationshipLabel>Monthly Maintenance (OMS MM Link)</relationshipLabel>
        <relationshipName>Monthly_Maintenance4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OMS_Taglines__c</fullName>
        <formula>WebID__r.OMS_Taglines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OMS Taglines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_No_Send_List_Calc__c</fullName>
        <description>This field is not intended to display on a page layout.  This will be used for a Rollup calculation.</description>
        <formula>IF(OR( Sales_Sent__c &gt;0 , Service_Sent__c &gt;0, DAP_Sent__c &gt;0, Other_Sent__c &gt;0),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Off No Send List Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Marketing_Specialist__c</fullName>
        <description>This field pulls the value from the Webid.</description>
        <formula>WebID__r.Online_Marketing_Specialist__r.FirstName &amp;&quot; &quot;&amp; WebID__r.Online_Marketing_Specialist__r.LastName &amp; 
IF( isblank(WebID__r.Online_Marketing_Specialist__r.Extension ), &quot;&quot;, &quot; - Ext: &quot;&amp; WebID__r.Online_Marketing_Specialist__r.Extension )</formula>
        <label>Online Marketing Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Status__c</fullName>
        <description>Modify this field whenever a new value is added to the Status field.  Not intended for display on any page layout.</description>
        <formula>IF(
   OR(
       ISPICKVAL( Status__c , &quot;Open&quot;),
       ISPICKVAL( Status__c , &quot;Not Started&quot;),
       ISPICKVAL( Status__c , &quot;In Progress&quot;),
       ISPICKVAL( Status__c , &quot;New&quot;),
       ISPICKVAL( Status__c , &quot;On Hold&quot;),
       ISPICKVAL( Status__c , &quot;Locked Site&quot;),
       ISPICKVAL( Status__c , &quot;Waiting for Approval&quot;)
      ),
    &quot;Open&quot;,
    IF(
       OR( ISPICKVAL( Status__c , &quot;Completed&quot;),
           ISPICKVAL( Status__c , &quot;Completed - No Update Needed&quot;)),
       &quot;Completed&quot;,
       IF(
          OR(
             ISPICKVAL( Status__c , &quot;Expired&quot;),
             ISPICKVAL( Status__c , &quot;Cancelled&quot;)
             ),
             &quot;Cancelled&quot;,
             &quot;N/A&quot;
           )
        )
     )</formula>
        <label>Open Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Plan_Last_Updated__c</fullName>
        <inlineHelpText>This is the last date that the Optimization Plan field was changed.</inlineHelpText>
        <label>Opt Plan Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Optimization_Call_Status__c</fullName>
        <formula>&quot;Hi Christy - status will eventually go here.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optimization Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optimization_Details__c</fullName>
        <inlineHelpText>Use this field to record specifics related to optimization strategies and follow up actions.</inlineHelpText>
        <label>Optimization Details</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Optimization_Plan__c</fullName>
        <label>Optimization Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Optimization_Type__c</fullName>
        <label>Optimization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Copy Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocation Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Campaign Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Specials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Tracking Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gathering Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Page Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Tracking Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Campaign Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Other Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>EMS Monthly Maintenance - Other Campaigns</description>
        <inlineHelpText>Campaigns that start with 03- will mark this as sent</inlineHelpText>
        <label>Other</label>
        <picklist>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Campaign_Status__c</fullName>
        <formula>IF(OR( ISPICKVAL(Sales__c,  &quot;Sent&quot;) ,  ISPICKVAL(Service__c, &quot;Sent&quot;),  ISPICKVAL(DAP__c, &quot;Sent&quot;),  ISPICKVAL(Other__c , &quot;Sent&quot;)), &quot;Completed&quot;, &quot;Not Completed&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Sales, Service or DAP = Sent or n/a then completed, else not completed</inlineHelpText>
        <label>Overall Campaign Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Marketing_Id__c</fullName>
        <formula>WebID__r.Owner_Marketing_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Marketing ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Month_s_Primary_Goal__c</fullName>
        <label>Past Month&apos;s Primary Goal</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Past_Month_s_Results__c</fullName>
        <label>Past Month&apos;s Results</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prepare_Optimization_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Prepare Optimization strategy and enter Recommendations</inlineHelpText>
        <label>Prepare Optimization Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_MM_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous MM Record</label>
        <referenceTo>Monthly_Maintenance__c</referenceTo>
        <relationshipLabel>Monthly Maintenance</relationshipLabel>
        <relationshipName>Monthly_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Attempts__c</fullName>
        <inlineHelpText>Enter number of times you have attempted to contact the primary contact.  This field is for the use of the record owner to assist with workflow only and is not used for reporting.</inlineHelpText>
        <label>Primary Contact Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Status__c</fullName>
        <label>Primary Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#009900</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProCare_Dissatisf__c</fullName>
        <label>ProCare Dissatisfaction Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Cost of ProCare Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied with website design/layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t see the value in ProCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidity issues at dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing technical issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind down dealer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProCare_Health_Comments__c</fullName>
        <label>ProCare Health Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProCare_Health__c</fullName>
        <inlineHelpText>• Unknown - Only used when we haven’t engaged the dealer
• Very satisfied - Promoter of Cobalt and/or service
• Satisfied - Seem happy with the service
• Dissatisfied - Cobalt detractor, complaining about the service, an at risk dealer</inlineHelpText>
        <label>ProCare Health</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
                <color>#E27001</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proactive_Steps_Taken__c</fullName>
        <inlineHelpText>All observations, actions taken, open problems, etc. that pertain to the website optimization strategy.</inlineHelpText>
        <label>Proactive Actions Taken</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP - Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP - Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP - Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts and Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSearch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Essentials</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Business_Review__c</fullName>
        <label>Quarterly Business Review</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Call_Schedule__c</fullName>
        <formula>WebID__r.Quarterly_Call_Schedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Call Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Engagement__c</fullName>
        <description>Updated through nightly process from ops reporting team</description>
        <inlineHelpText>Shows the quarterly engagement status at the time of the month field in this record.</inlineHelpText>
        <label>Quarterly Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>Qtr Engaged - DP/GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qtr Engaged - PPC/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Engaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Health_Check__c</fullName>
        <label>Quarterly Health Check</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Site_Check_Status__c</fullName>
        <label>Quarterly Site Check Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Strategy_Call_Status__c</fullName>
        <label>Quarterly Strategy Call Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROI_Report__c</fullName>
        <label>ROI Report</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation_Status__c</fullName>
        <label>Recommendation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendations_Next_Steps__c</fullName>
        <label>Recommendations / Next Steps</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recommendations__c</fullName>
        <label>Recommendations</label>
        <picklist>
            <picklistValues>
                <fullName>DAP Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Goal Driven CTA’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Focus (specify below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalized Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalized Lead Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Prop / Why buy here?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW Regional Focus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>